# PythonAutograder

./: .gitignore  README.md  activate.bat  pyproject.toml
Configurations/: config.json
Configurations/Criteria/: module1.json  module2.json  module3.json  module4.json  module5.json
Configurations/Tests/: comparison_tests.json  module5_tests.json
Extensions/core_tests/: extension.json  main.py
Tests/instruct/: loop_test.py  main.py
Tests/instructor/: program2_solution.py
Tests/loop_test/: main.py
Tests/program1_auto_grader/: bestPractices_error.py  broke.py  instructor_solution_file.py  many_errors.py  no_errors.py  semantic_error2.py  semantic_error3.py  semantic_errors1.py  semantic_errors4.py  syntax_errror1.py
Tests/program2/: contacts.csv  program2_instructions.docx  program2_stu_correct.py  program2_stu_incorrect1.py  program2_stu_incorrect2.py  program2_stu_incorrect3.py
Tests/test/: bonk.txt  loop_test.py  main.py
src/: autograder_brute_test.py  autograder_config_test.py  autograder_refined_test.py  autograder_template.py  flask_app.py  simple_test.py  util.py
src/autograder/: autograder_application.py  autograder_instance_data.py  autograder_modifier.py  autograder_report.py  autograder_settings.py  code_test.py  code_test_kinds.py  code_test_type.py  code_walker.py  project_settings.py
src/autograder/extensions/: extension.py  extension_manager.py
src/project/: directory_file.py  file_type.py  project.py  python_file.py
src/static/: style.css
src/templates/: base.html
src/utils/: util.py  version.py
